# sunshine_backend

./: .env.example  .gitignore  Dockerfile  README.md  WINDOWS_PS1_RUN_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  windows_dev_bootstrap.ps1
.claude/: settings.local.json
alembic/: env.py  script.py.mako
app/: main.py
docs/: HANDOVER.md  MOCK_TECHNICAL_DEBT.md  RUN_GUIDE.md  TICKET_002.md  TICKET_003.md  TICKET_004.md  TICKET_005.md  TICKET_006.md  TICKET_007.md  TICKET_008.5.md  TICKET_008.md  TICKET_009.md  TICKET_010.md  TICKET_011.md  TICKET_012.md  TICKET_013.md  TICKET_014a.md  TICKET_014b.md  TICKET_014c.md  TICKET_015.md  TICKET_016.md  TICKET_017.md  TICKET_018.md  TICKET_019.md  TICKET_020.md  TICKET_021.md  TICKET_022.md  TICKET_023.md  TICKET_024.md  TICKET_025.md  TICKET_026.md  TICKET_027.md  TICKET_028.md  TICKET_029.md  TICKET_030.md  TICKET_031.md  TICKET_032.md  TICKET_033.md  TICKET_034.md  TICKET_035.md  (+28 more)
frontend/: README.md  package-lock.json  package.json  vite.config.ts
scripts/: check_gate.sh  check_qwen_endpoint.sh  frontend_release_gate.sh  import_rag_seed.sh  import_species_catalog.sh  update_qwen_endpoint.sh  validate_rag_seed_db.py  validate_rag_seed_sql.py  windows_dev_bootstrap.ps1
sunshine_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_api_contract.py  test_audio_port.py  test_audit_evidence.py  test_care_log_service.py  test_character_state_api_integration.py  test_character_state_engine.py  test_character_state_persistence.py  test_chat_evaluation.py  test_chat_orchestrator.py  (+88 more)
(+260 files in other folders)
